--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -95,7 +95,7 @@
         <img src="{% static 'portfolio/assets/4922073.png' %}" alt="blog" class="icon">
     </a>
     <a href="https://www.instagram.com/chocky_.18/">
-        <img src="{% static 'portfolio/assets/icon-instagram.svg' %}" alt="instagram" class="icon">
+        <img src="portfolio/static/portfolio/assets/icon-email.svg" alt="instagram" class="icon">
     </a>
 
 </div>
