--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static 'portfolio/static/portfolio/css/styles.css' %}" rel="stylesheet" />
+    <link href="{% static 'portfolio/css/styles.css' %}" rel="stylesheet" />
 </head>
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
@@ -59,7 +59,7 @@
                         <div class="profile bg-gradient-primary-to-secondary">
                             <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
                             <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                            <img class="profile-img" src="{% static 'portfolio/static/portfolio/assets/display.png' %}" alt="..." />
+                            <img class="profile-img" src="{% static 'portfolio/assets/display.png' %}" alt="..." />
                             <div class="dots-1">
                                 <!-- SVG Dots-->
                                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 191.6 1215.4" style="enable-background: new 0 0 191.6 1215.4" xml:space="preserve">
@@ -80,7 +80,7 @@
 </main>
  <div class="icon-links">
     <a href="https://github.com/chocky18">
-        <img src="{% static 'portfolio/static/portfolio/assets/icon-github.svg' %}" alt="GitHub" class="icon">
+        <img src="{% static 'portfolio/assets/icon-github.svg' %}" alt="GitHub" class="icon">
     </a>
     <a href="mailto:nareshtinnaluri7365@gmail.com">
         <img src="{% static 'portfolio/assets/icon-email.svg' %}" alt="email" class="icon">
@@ -89,13 +89,14 @@
         <img src="{% static 'portfolio/assets/images.png' %}" alt="website" class="icon">
     </a>
     <a href="https://www.linkedin.com/in/naresh-t-85725012a/">
+        
         <img src="{% static 'portfolio/assets/icon-linkedin.svg' %}" alt="LinkedIn" class="icon">
     </a>
     <a href="https://chockynaresh18.wixsite.com/consciousai">
         <img src="{% static 'portfolio/assets/4922073.png' %}" alt="blog" class="icon">
     </a>
     <a href="https://www.instagram.com/chocky_.18/">
-        <img src="portfolio/static/portfolio/assets/icon-email.svg" alt="instagram" class="icon">
+       <img src="{% static 'portfolio/assets/4922073.png' %}" alt="blog" class="icon">
     </a>
 
 </div>
