--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>Naresh Tinnaluri's Portfolio</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="{% static 'portfolio/assets/favicon.ico' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
     <!-- Custom Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,8 +16,8 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static 'portfolio/css/styles.css' %}" rel="stylesheet" />
-    <link href="portfolio/static/portfolio/css/styles.css" rel="stylesheet" />
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+<!--     <link href="portfolio/static/portfolio/css/styles.css" rel="stylesheet" /> -->
     
 </head>
 <body class="d-flex flex-column h-100">
@@ -82,23 +82,23 @@
 </main>
  <div class="icon-links">
     <a href="https://github.com/chocky18">
-        <img src="{% static 'portfolio/assets/icon-github.svg' %}" alt="GitHub" class="icon">
+        <img src="{% static 'assets/icon-github.svg' %}" alt="GitHub" class="icon">
     </a>
     <a href="mailto:nareshtinnaluri7365@gmail.com">
-        <img src="{% static 'portfolio/assets/icon-email.svg' %}" alt="email" class="icon">
+        <img src="{% static 'assets/icon-email.svg' %}" alt="email" class="icon">
     </a>
     <a href="https://nirmataneurotech.com/">
-        <img src="{% static 'portfolio/assets/images.png' %}" alt="website" class="icon">
+        <img src="{% static 'assets/images.png' %}" alt="website" class="icon">
     </a>
     <a href="https://www.linkedin.com/in/naresh-t-85725012a/">
         
-        <img src="{% static 'portfolio/assets/icon-linkedin.svg' %}" alt="LinkedIn" class="icon">
+        <img src="{% static 'icon-linkedin.svg' %}" alt="LinkedIn" class="icon">
     </a>
     <a href="https://chockynaresh18.wixsite.com/consciousai">
-        <img src="{% static 'portfolio/assets/4922073.png' %}" alt="blog" class="icon">
+        <img src="{% static 'assets/4922073.png' %}" alt="blog" class="icon">
     </a>
     <a href="https://www.instagram.com/chocky_.18/">
-       <img src="{% static 'portfolio/assets/4922073.png' %}" alt="blog" class="icon">
+       <img src="{% static 'assets/4922073.png' %}" alt="blog" class="icon">
     </a>
 
 </div>
