--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -16,7 +16,9 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+    <link href="{% static "css/styles.css" %}" rel="stylesheet" >
+<!--     <link href="{% static "css/clean-blog.min.css" %}" rel="stylesheet"> -->
+    
 <!--     <link href="portfolio/static/portfolio/css/styles.css" rel="stylesheet" /> -->
     
 </head>
