--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -94,7 +94,7 @@
     </a>
     <a href="https://www.linkedin.com/in/naresh-t-85725012a/">
         
-        <img src="{% static 'icon-linkedin.svg' %}" alt="LinkedIn" class="icon">
+        <img src="{% static 'assets/icon-linkedin.svg' %}" alt="LinkedIn" class="icon">
     </a>
     <a href="https://chockynaresh18.wixsite.com/consciousai">
         <img src="{% static 'assets/4922073.png' %}" alt="blog" class="icon">
