--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -100,7 +100,7 @@
         <img src="{% static 'assets/4922073.png' %}" alt="blog" class="icon">
     </a>
     <a href="https://www.instagram.com/chocky_.18/">
-       <img src="{% static 'assets/4922073.png' %}" alt="blog" class="icon">
+       <img src="{% static 'assets/icon-instagram.svg' %}" alt="blog" class="icon">
     </a>
 
 </div>
